--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 			<div class="row ">
 				<div class="col-lg-3">
 					<div class="grup-text">
-						<!-- <p>PAY<span>THRIFT.</span></p> -->
 						 <p><b>PAMVRC</b></p>
 					</div>
 				</div>
@@ -85,6 +84,8 @@
 
 	<!-- End Sectio hero -->
 
+
+	<!-- Section Jadwal -->
 	<div class="content mt-2">
 		<div class="container">
 			<div class="row">
@@ -118,6 +119,59 @@
 			</div>
 		</div>
 	</div>
+	<!-- End Section Jadwal -->
+
+
+	<!-- Section Galeri Foto -->
+	<section id="gallery" class="py-5">
+		<div class="container">
+			<h2 class="text-left mb-4">GALERI</h2>
+			<div class="row">
+				<div class="col-md-4 mb-3">
+					<img src="assets/img/galeri/Slide 2.png" class="img-fluid rounded shadow" alt="Foto 1">
+				</div>
+				<div class="col-md-4 mb-3">
+					<img src="assets/img/galeri/Slide 3.png" class="img-fluid rounded shadow" alt="Foto 2">
+				</div>
+				<div class="col-md-4 mb-3">
+					<img src="assets/img/galeri/Slide 4.png" class="img-fluid rounded shadow" alt="Foto 3">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Section Galeri Foto -->
+
+
+	<!-- Section Footer -->
+	<footer id="footer" class="bg-dark text-white py-4">
+		<div class="container">
+			<div class="row" id="content">
+				<div class="col-lg-4 text-left">
+					<ul type="none">
+						<h5>Info Kontak</h5>
+						<li><i class="fas fa-book"></i> info@viadolorosa.web.id</li>
+						<li><i class="fas fa-phone"></i> 0812 2445 2338</li>
+						<li><i class="fas fa-map-marker-alt"></i> Ridge Camp Mile 72, Tembagapura</li>
+					</ul>
+				</div>
+				<div class="col-lg-4 text-center">
+					<h5>Ikuti Kami</h5>
+					<a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
+					<a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
+					<a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
+				</div>
+				<div class="col-lg-4 text-end">
+					<h5>Hak Cipta</h5>
+					<p>&copy; admin . All Rights Reserved.</p>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- End Section Footer -->
+
+<!-- Tambahkan FontAwesome untuk ikon media sosial -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+	
 
 	<script src="assets/dist/js/undangan.js"></script>
 	
