--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 	<!-- Section Galeri Foto -->
 	<section id="gallery" class="py-5">
 		<div class="container">
-			<h2 class="text-left mb-4">GALERI</h2>
+			<h2 class="text-left primary-text">GALERI KEGIATAN</h2>
+			<label for="label" class="label mb-4">Setiap momen yang terabadikan membawa cerita dan semangat kebersamaan.</label>
 			<div class="row">
 				<div class="col-md-4 mb-3">
 					<img src="assets/img/galeri/Slide 2.png" class="img-fluid rounded shadow" alt="Foto 1">
