--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	<!-- Section Galeri Foto -->
 	<section id="gallery" class="py-5">
 		<div class="container">
-			<h2 class="text-left primary-text">GALERI KEGIATAN</h2>
+			<h2 class="text-left primary-text">BINGKAI MEMORI</h2>
 			<label for="label" class="label mb-4">Setiap momen yang terabadikan membawa cerita dan semangat kebersamaan.</label>
 			<div class="row">
 				<div class="col-md-4 mb-3">
@@ -136,6 +136,18 @@
 				</div>
 				<div class="col-md-4 mb-3">
 					<img src="assets/img/galeri/Slide 4.png" class="img-fluid rounded shadow" alt="Foto 3">
+				</div>
+
+				<div class="col-md-4 mb-3">
+					<img src="assets/img/galeri/Slide 5.png" class="img-fluid rounded shadow" alt="Foto 3">
+				</div>
+
+				<div class="col-md-4 mb-3">
+					<img src="assets/img/galeri/Slide 6.png" class="img-fluid rounded shadow" alt="Foto 3">
+				</div>
+
+				<div class="col-md-4 mb-3">
+					<img src="assets/img/galeri/Slide 7.png" class="img-fluid rounded shadow" alt="Foto 3">
 				</div>
 			</div>
 		</div>
@@ -149,21 +161,21 @@
 			<div class="row" id="content">
 				<div class="col-lg-4 text-left">
 					<ul type="none">
-						<h5>Info Kontak</h5>
-						<li><i class="fas fa-book"></i> info@viadolorosa.web.id</li>
-						<li><i class="fas fa-phone"></i> 0812 2445 2338</li>
-						<li><i class="fas fa-map-marker-alt"></i> Ridge Camp Mile 72, Tembagapura</li>
+						<h5>CONTACT</h5>
+						<li><i class="fas fa-book primary-text"></i> info@viadolorosa.web.id</li>
+						<li><i class="fas fa-phone primary-text"></i> 0812 2445 2338</li>
+						<li><i class="fas fa-map-marker-alt primary-text"></i> Ridge Camp Mile 72, Tembagapura</li>
 					</ul>
 				</div>
 				<div class="col-lg-4 text-center">
-					<h5>Ikuti Kami</h5>
+					<h5>JOIN WITH US</h5>
 					<a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
 					<a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
 					<a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
 				</div>
 				<div class="col-lg-4 text-end">
-					<h5>Hak Cipta</h5>
-					<p>&copy; admin . All Rights Reserved.</p>
+					<h5>COPY RIGHT</h5>
+					<p>&copy; Superuser . All Rights Reserved.</p>
 				</div>
 			</div>
 		</div>
