--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 				<div class="col-lg-4 text-left">
 					<ul type="none">
 						<h5>CONTACT</h5>
-						<li><i class="fas fa-book primary-text"></i> info@viadolorosa.web.id</li>
-						<li><i class="fas fa-phone primary-text"></i> 0812 2445 2338</li>
+						<li><i class="fas fa-file primary-text"></i> info@viadolorosa.web.id</li>
+						<li><i class="fas fa-mobile primary-text"></i> 0812-2445-2338</li>
 						<li><i class="fas fa-map-marker-alt primary-text"></i> Ridge Camp Mile 72, Tembagapura</li>
 					</ul>
 				</div>
