--- a/index.html
+++ b/index.html
@@ -22,36 +22,33 @@
 </head>
 
 
-  <body>    
+  <body>   
+	
 	<nav class="nav">
 		<div class="container">
 			<div class="row ">
+
 				<div class="col-lg-3">
 					<div class="grup-text">
 						 <p><b>PAMVRC</b></p>
 					</div>
 				</div>
-				
+
 				<div class="col-lg-9">
 					<ul class="wrapper-nav">
 						<li><a href="#">Beranda</a></li>
 						<li><a href="#">Kegiatan</a></li>
 						<li><a href="#">Jadwal</a></li>
-						<li><a href="#">Insta Story</a></li>
+						<li><a class="btnCall" href="#">Instastory</a></li>
 						<li><a href="#">Help</a></li>
-						<!-- <li><a href="#">Foto</a></li>
-						<li><a href="#">Help</a></li> -->
-						<!-- <li><a class="btnCall" href="#">Singup</a></li>
-						<li><a href="#">EN</a></li>
-						<li><a href="#">Contact us</a></li> -->
 					</ul>
 				</div>
+
 			</div>
 		</div>
 	</nav>
 
 	<!-- untuk section hero -->
-
 	<div id="hero" class="mt-5">
 		<div class="container">
 			<div class="row  colom-reverse">
@@ -81,7 +78,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- End Sectio hero -->
 
 
@@ -184,12 +180,7 @@
 
 <!-- Tambahkan FontAwesome untuk ikon media sosial -->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<script src="assets/dist/js/undangan.js"></script>
 	
-
-	<script src="assets/dist/js/undangan.js"></script>
-	
-
-
-
   </body>
 </html>
